@@ -41,7 +41,7 @@
 #                          the form '-Wl,blah'
 #                          (defaults to empty in acinclude.m4)
 #
-#   port_specific_symbol_file
+#   port_specific_symbol_files
 #                          whitespace-seperated list of files containing
 #                              additional symbols to export from the shared
 #                              library, when symbol versioning is in use
