@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# Copyright (C) 2002 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003 Free Software Foundation, Inc.
 #
 # This file is part of the GNU ISO C++ Library.  This library is free
 # software; you can redistribute it and/or modify it under the
@@ -45,7 +45,10 @@ if readelf --help | grep -- --wide > /dev/null; then
 fi
 
 # This avoids weird sorting problems later.
-export LC_ALL=C
+LC_ALL=C
+export LC_ALL
+LANG=C
+export LANG
 
 tmp=extract.$$
 
