@@ -37,14 +37,13 @@ toolexeclib_LTLIBRARIES = libstdc++.la
 
 # Symbol versioning for shared libraries.
 if GLIBCXX_BUILD_VERSIONED_SHLIB
-port_specific_symbol_file = @port_specific_symbol_file@
 version_arg = -Wl,--version-script=libstdc++-symbol.ver
 libstdc++-symbol.ver:  ${glibcxx_srcdir}/@SYMVER_MAP@
 	cp ${glibcxx_srcdir}/@SYMVER_MAP@ ./libstdc++-symbol.ver
-	if test "x${port_specific_symbol_file}" != x; then \
+	if test "x@port_specific_symbol_files@" != x; then \
 	  sed -n '1,/DO NOT DELETE/p' $@ > tmp.top; \
 	  sed -n '/DO NOT DELETE/,$$p' $@ > tmp.bottom; \
-	  cat tmp.top $(port_specific_symbol_file) tmp.bottom > $@; \
+	  cat tmp.top @port_specific_symbol_file@ tmp.bottom > $@; \
 	  rm tmp.top tmp.bottom; \
 	fi
 else
